deploy/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watering-control-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - homeautomation-api.kvalvaag-tech.com
    secretName: kvalvaag-tech-tls
  rules:
    - host: homeautomation-api.kvalvaag-tech.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: watering-control-service
              port:
                number: 8080
